Addition of the different layout needed with color scheme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">PROG7313_POE</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_goals">Goals</string>
+    <string name="title_transactions">Transactions</string>
+    <string name="title_reports">Reports</string>
+    <string name="title_categories">Categories</string>
+
 </resources>
