--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_transactions">Transactions</string>
     <string name="title_reports">Reports</string>
     <string name="title_categories">Categories</string>
+    <string name="addnewgoal">Add New Goal</string>
 
 </resources>
