--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_reports">Reports</string>
     <string name="title_categories">Categories</string>
     <string name="addnewgoal">Add New Goal</string>
+    <string name="saveTransaction">Save</string>
 
 </resources>
