--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_categories">Categories</string>
     <string name="addnewgoal">Add New Goal</string>
     <string name="saveTransaction">Save</string>
+    <string name="newCategory">New Category</string>
 
 </resources>
