--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="saveTransaction">Save</string>
     <string name="newCategory">New Category</string>
     <string name="back_button_description">Back</string>
+    <string name="add_photo">Add Photo</string>
 
 </resources>
