Date picker added to transaction

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PROG7313_POE</string>
+    <string name="app_name">EZ Budget</string>
     <string name="title_home">Home</string>
     <string name="title_goals">Goals</string>
     <string name="title_transactions">Transactions</string>
